...
    <string name="pref_key_overflight_strategy" translatable="false">overflight_strategy</string>

    <!-- Dialog general -->
    <string name="dialog_cancel">Cancel</string>

    <!-- Mapbox State -->
    <string name="map_ready" translatable="false">MAP READY</string>
    <string name="map_not_ready" translatable="false">MAP NOT READY</string>
    <string name="map_downloading" translatable="false">MAP DOWNLOADING</string>
    <string name="map_deleting" translatable="false">MAP DELETING</string>

    <!-- Map Activity -->
    <string name="intent_key_group_id" translatable="false">group_id</string>
...
    <string name="dialog_positive_button">Download</string>
    <string name="navigate_title">List</string>
    <string name="navigate_positive_button">Navigate To</string>
    <string name="navigate_neutral_button_title">Delete</string>
    <string name="toast_region_deleted">Region Deleted</string>
    <string name="toast_no_regions_yet">No regions yet</string>
    <string name="dialog_toast">Name cannot be empty</string>
    <string name="region_name_error">Unknown Region name</string>
    <string name="maps_managing">Maps managing (get offline maps here)</string>
    <string name="download_region_dialog_fragment">Download Region</string>
    <string name="list_offline_region_dialog_fragment">Offline Region List</string>

    <!-- Navigation -->
...
