...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="deleteCurrentRegion"
            android:text="@string/delete" />

        <Button
            android:id="@+id/download_button"
            style="@style/AppTheme.BarButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="downloadRegionDialog"
            android:text="@string/dialog_positive_button" />
...
